--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mmenu-js/9.3.0/mmenu.min.css" integrity="sha512-nNatP1G6CEh43irXY/GN4cDcLRX/R0jAYAV/ulFZcotSXcuIQE5Do4TuDOYNAD2SCIpmIbaYSllyjTysSCkpEw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" href="./assets/icon.png" type="image/x-icon" size="16x16">
-  <link rel="stylesheet" href="./scss/style.scss">
+  <!-- <link rel="stylesheet" href="./scss/style.scss"> -->
+   <link rel="stylesheet" href="./scss/style.css">
   <title>PATRIOT</title>
 </head>
 <body class="root">
@@ -203,7 +204,7 @@
               <div class="branding__navs"></div>
             </div>
 
-            <form class="form" method="post" action="email.php">
+            <form class="form" method="post" action="/email.php">
               <div class="form__header">
                 <div class="form__header-info">
                   <h3 class="form__title">
