--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               <div class="branding__navs"></div>
             </div>
 
-            <form class="form" method="post" action="/email.php">
+            <form class="form" method="post" action="email.php">
               <div class="form__header">
                 <div class="form__header-info">
                   <h3 class="form__title">
